Added the dropdowns for the car search

--- a/CarFinder/CarFinder.csproj
+++ b/CarFinder/CarFinder.csproj
@@ -177,8 +177,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CarByYmm.cs" />
     <Compile Include="Controllers\CarController.cs" />
-    <Compile Include="Controllers\CarsByYMMController.cs" />
+    <Compile Include="Controllers\CarSearchController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HttpPost.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
@@ -187,7 +188,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BingContainer.cs" />
     <Compile Include="Models\Car.cs" />
-    <Compile Include="Models\CarsByYMM.cs" />
+    <Compile Include="Models\CarSearch.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -252,7 +253,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\CarsByYMM\CarsByYMM.cshtml" />
+    <Content Include="Views\CarSearch\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
