--- a/CarFinder/CarFinder.csproj
+++ b/CarFinder/CarFinder.csproj
@@ -177,11 +177,21 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CarByYmm.cs" />
     <Compile Include="Controllers\CarController.cs" />
+    <Compile Include="Controllers\CarSearch2Controller.cs" />
     <Compile Include="Controllers\CarSearchController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HttpPost.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="DataTablesMVC\Column.cs" />
+    <Compile Include="DataTablesMVC\ColumnCollection.cs" />
+    <Compile Include="DataTablesMVC\DataTablesBinder.cs" />
+    <Compile Include="DataTablesMVC\DataTablesJsonBinder.cs" />
+    <Compile Include="DataTablesMVC\DataTablesResponse.cs" />
+    <Compile Include="DataTablesMVC\DefaultDataTablesRequest.cs" />
+    <Compile Include="DataTablesMVC\IDataTablesRequest.cs" />
+    <Compile Include="DataTablesMVC\NameValueCollectionExtensions.cs" />
+    <Compile Include="DataTablesMVC\Search.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -602,6 +612,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\CarSearch\Index.cshtml" />
     <Content Include="Views\CarSearch\Details.cshtml" />
+    <Content Include="Views\CarSearch2\Details.cshtml" />
+    <Content Include="Views\CarSearch2\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
